Unbound/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unbound-combo-deployment
  
  labels:
    project: unbound-combo


spec:
  replicas: 4
  selector:
    matchLabels:
      pod-project: unbound-combo
  # serviceName: pihole-statefulsets-webgui-service
  minReadySeconds: 10
  template:
    metadata:
      labels:
        pod-project: unbound-combo
        project-ns-name: private-srvc
        # pod-project: doh
    spec:
      # terminationGracePeriodSeconds: 10
      automountServiceAccountToken: false   # Container doesn't need service account token
      securityContext:
        appArmorProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        fsGroup: 1500
        runAsGroup: 1500
        runAsUser: 1500       
      containers:
        - name: unbound
          image: mvance/unbound:latest
          imagePullPolicy: IfNotPresent
          # command: ["unbound", "-c", "/etc/unbound.conf"]
          securityContext:
            appArmorProfile:
              type: RuntimeDefault
            runAsNonRoot: false
            readOnlyRootFilesystem: false
            # fsGroup: 1500
            runAsGroup: 0
            runAsUser: 0
          volumeMounts:
            - name: cronjobber-blocklists
              mountPath: /opt/unbound/etc/unbound/zonefiles
              readOnly: false
            - name: unbound-config
              mountPath: /opt/unbound/etc/unbound/unbound.conf       # mount a single key as a file
              subPath: unbound.conf
              # readOnly: true
           
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP

          startupProbe:
            tcpSocket:
              port: 53
            # exec:
            #   command: ["sh","-c","nslookup -timeout=2 google.com 127.0.0.1 >/dev/null"]
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 60
          livenessProbe:
            tcpSocket:
              port: 53
            # exec:
            #   command: ["sh","-c","nslookup -timeout=2 google.com 127.0.0.1 >/dev/null"]
            periodSeconds: 5
            failureThreshold: 4
          readinessProbe:
            tcpSocket:
              port: 53
            # exec:
            #   command: ["sh","-c","nslookup -timeout=2 google.com 127.0.0.1 >/dev/null"]
            periodSeconds: 10
            failureThreshold: 6
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "1536Mi"
              # cpu: "550m"

        # https://github.com/eko/pihole-exporter
        # https://github.com/letsencrypt/unbound_exporter
        # - name: prom-exporter?
        #   image: ekofr/pihole-exporter:v1.2.0
        #   imagePullPolicy: IfNotPresent
        #   ports:
        #     - name: prom-export
        #       containerPort: 50934
        #       protocol: TCP  


        - name: cloudflare-1-1-1-1
          image: visibilityspots/cloudflared:v2025.7.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: doh-unseiso-udp
              containerPort: 5051
              protocol: UDP  
            - name: doh-unseiso-tcp
              containerPort: 5051
              protocol: TCP           
          resources:
            requests:
              memory: "48Mi"
              cpu: "100m"

        - name: cloudflare-1-1-1-2
          image: visibilityspots/cloudflared:v2025.7.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: doh-nov-tcp
              containerPort: 5052
              protocol: TCP
            - name: doh-nov-udp
              containerPort: 5052
              protocol: UDP    
          resources:
            requests:
              memory: "48Mi"
              cpu: "100m"
                
        - name: cloudflare-1-1-1-3
          image: visibilityspots/cloudflared:v2025.7.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: doh-unseiso-udp
              containerPort: 5053
              protocol: UDP   
            - name: doh-unseiso-tcp
              containerPort: 5053
              protocol: TCP  
          resources:
            requests:
              memory: "48Mi"
              cpu: "100m"       
    
      volumes:
      - name: cronjobber-blocklists
        persistentVolumeClaim: 
          claimName: unbound-combo-blocklist-pvc
      - name: cronjobber-update-sh
        configMap:
          name: cronjobber-sh-config   
      - name: unbound-config
        configMap:
          name: unbound-conf-configmap
